# qtpong

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE.md  Makefile  ball.cpp  ball.h  cmake_install.cmake  engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paddle.cpp  paddle.h  qtpong  qtpong.cpp  qtpong.h  qtpong_automoc.cpp  scoreboard.cpp  scoreboard.h  testqtpong  testqtpong.cpp  testqtpong.moc  testqtpong_automoc.cpp  ui_mainwindow.h
src/: ball.cpp  paddle.h  qtpong.cpp
testqtpong_automoc.dir/: moc_engine_KJWSEL5MH53XEC.cpp  moc_qtpong_HX7YA3TSSWABXP.cpp
